force-app/main/default/objects/Bigtime__c/Bigtime__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>BigTime</label>
</CustomObject>