force-app/main/default/objects/Bigtime__c/fields/FirmId__c.field-meta.xml
<CustomField>
    <fullName>FirmId__c</fullName>
    <label>FirmId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>