force-app/main/default/objects/Bigtime__c/fields/Pwd__c.field-meta.xml
<CustomField>
    <fullName>Pwd__c</fullName>
    <label>Pwd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>