force-app/main/default/objects/Bigtime__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>